backend: changed all PUTs to PATCHs
