# backend/src/main/java/com/researchhub/backend/application/ApplicationResponse.java
@@ -4,10 +4,11 @@ import java.time.OffsetDateTime;
 import java.util.UUID;
 
 public record ApplicationResponse(
-        UUID id,
-        UUID studentId,
-        UUID projectId,
-        ApplicationStatus status,
-        OffsetDateTime appliedAt,
-        OffsetDateTime updatedAt
+    UUID id,
+    UUID studentId,
+    UUID projectId,
+    ApplicationStatus status,
+    String cvFile,
+    OffsetDateTime appliedAt,
+    OffsetDateTime updatedAt
 ) {}
