# backend/src/main/java/com/researchhub/backend/application/CreateApplicationRequest.java
@@ -6,7 +6,6 @@ import java.util.UUID;
 
 @Data
 public class CreateApplicationRequest {
-    private UUID studentId;
     private UUID projectId;
-    private ApplicationStatus status; // optional, will default to PENDING if not provided
+    private String cvFile;
 }
